--- a/index.html
+++ b/index.html
@@ -2,22 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Git start</title>
+    <title>näide</title>
 </head>
-
-<BODY BGCOLOR="FFFFFF">
-<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"></CENTER>
-<HR>
-<a href="http://somegreatsite.com">Link Name</a>
-is a link to another nifty site
-<H1>This is a Header</H1>
-<H2>This is a Medium Header</H2>
-Send me mail at <a href="mailto:support@yourcompany.com">
-    support@yourcompany.com</a>.
-<P> This is a new paragraph!
-<P><B>This is a new paragraph!</B>
-    <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
-<HR>
-
+<BODY>
 </BODY>
 </html>
